Bug 355827: SpiderMonkey's readline() doesn't handle EOF properly, r=crowder, patch by KATO Kazuyoshi <kzys@8-p.info>